--- a/Quote Generator/style.css
+++ b/Quote Generator/style.css
@@ -7,7 +7,7 @@ html {
 body {
     margin: 0;
     min-height: 100vh;
-    background-color: rgb(255, 146, 106);
+    background-color: #ff926a;
     font-family: 'Roboto', sans-serif;
     color: black;
     font-weight: 500;
@@ -58,18 +58,42 @@ button {
     border: none;
     border-radius: 10px;
     color: #fff;
-    background: #333;
+    background: #ff926a;
     outline: none;
     padding: 0.5rem 1.8rem;
-    box-shadow: 3px 3px black;
+    box-shadow: 0 0.3rem black;
 }
 
 button:hover {
-    filter: brightness(100%);
+    filter: brightness(130%);
 }
 
 button:active {
-    transform: translate(0 0.3rem);
+    transform: translate(0, 0.3rem);
+    box-shadow: 0 0.1rem black;
+}
+
+.twitter-button:hover {
+    color: #38a1f3;
+}
+
+.fa-twitter {
+    font-size: 1.5rem;
+}
+
+/* Loader */
+.loader {
+    border: 16px solid #f3f3f3;
+    border-top: 16px solid #3498db;
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {transform: rotate(0deg);}
+    100% {transform: rotate(360deg);}    
 }
 
 /* Media Query: Tablet or Smaller */
